Revision history for App-Doh

          - Added maximum generation run time
          - URIs now properly enscaped
          - Improved Request API will instantiate from a hash

0.7.1     2014-09-19 00:23:42
          - Improved Request API raw params now private
          - Session secret now has more source options
          - Component loading respects + at the start of class names
          - Static generation no longer creates defunct process
          - Added editor CSS to repo for install off Github
          - Enabled ConditionalGET in Plack stack
          - Serve JS from content delivery network
          - Added t::boilerplate to tests

0.6.1     2014-08-07 15:39:42
          - Added Data::Validation to user form
          - Implemented status message queue
          - Get /favicon.ico now returns 404
          - Added make_skin method to CLI
          - Renamed less files to create skin structure
          - Improved layout of profile-user form
          - Put page status on a div since defaultStatus not supported
          - Removed ForwardEvents class from JS. Doesn't work
          - Created editor.tt for the markdown editor
          - Style fixes to post navigation buttons

0.5.1     2014-07-29 18:35:58
          - Made Root controller look like a routing table
          - Made component loading a role
          - Added keybindings for the markdown editor
          - Refactored markdown editor
          - Switched status messages to JS notice board

0.4.1     2014-07-26 01:04:29
          - Added insertGraves to markdown editor
          - Added CodeMirror JS markdown editor
          - Added config user attribute to own Daemon process
          - Added Role::Component. Doh.pm contains only VERSION number
          - Streamlined the controller code
          - Server throws better exceptions
          - Patched bug in warnings::illegalproto for Perl < 5.012
          - Pass appclass in from doh-server