@@ -3,14 +3,17 @@ package App::Doh::Role::Component;
 use namespace::autoclean;
 
 use Class::Usul::Constants qw( TRUE );
-use Class::Usul::Types     qw( BaseType SimpleStr );
+use Class::Usul::Types     qw( BaseType NonEmptySimpleStr SimpleStr );
 use Moo::Role;
 
-has 'moniker' => is => 'ro', isa => SimpleStr, required => TRUE;
+has 'encoding' => is => 'lazy', isa => NonEmptySimpleStr,
+   builder     => sub { $_[ 0 ]->config->encoding };
 
-has 'usul'    => is => 'ro', isa => BaseType,
-   handles    => [ qw( config l10n lock log ) ],
-   init_arg   => 'builder', required => TRUE;
+has 'moniker'  => is => 'ro',   isa => SimpleStr, required => TRUE;
+
+has 'usul'     => is => 'ro',   isa => BaseType,
+   handles     => [ qw( config l10n lock log ) ],
+   init_arg    => 'builder', required => TRUE;
 
 1;
 
